--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
 <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>My GitHub Site</title>
+  <link rel="manifest" href="/manifest.json" />
   <link rel="stylesheet" href="style.css">
    <script src="script.js"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
