--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My GitHub Site</title>
-  <link rel="manifest" href="/manifest.json" />
+  <title>nineteenYap</title>
+  <link rel="manifest" href="manifest.json" />
   <link rel="stylesheet" href="style.css">
    <script src="script.js"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
-kanye1
+kanye2
 </html>
