--- a/index.html
+++ b/index.html
@@ -9,6 +9,29 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+ <link rel="icon" href="fyav.jpg" type="image/jpg">
 </head>
-kanye2
+	<div id = "signin">
+		<div></div>
+		<div>
+			<div id="key">
+				<div  class="tooth tooth1"></div>
+				<div  class="tooth tooth2"></div>
+				<div  class="tooth tooth3"></div>
+				<div class="backcircle"></div>
+				<div class="innerbackcircle"></div>
+				<input id="username"></input>
+				<input id="password" type="password" onkeypress="if(event.keyCode==13){enterPass();}"></input>
+			</div>
+			<div id="key2">
+				<div  class="toothe tooth1"></div>
+				<div  class="toothe tooth2"></div>
+				<div  class="toothe tooth3"></div>
+				<div class="backcircle"></div>
+				<div class="innerbackcircle"></div>
+				<button class="flip" id="k2p" >forgot?</button>
+			</div>
+		</div>
+		<div></div>
+	</div>
 </html>
